<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>com.atlassian.jira.collector.plugin</groupId>
    <artifactId>jira-issue-collector-plugin-it</artifactId>
    <version>1.1</version>

    <parent>
        <groupId>com.atlassian.pom</groupId>
        <artifactId>atlassian-closedsource-pom</artifactId>
        <version>25</version>
    </parent>

    <organization>
        <name>Atlassian</name>
        <url>http://www.atlassian.com/</url>
    </organization>

    <scm>
        <connection>scm:hg:ssh://hg@bitbucket.org/atlassian/jira-issue-collector-plugin</connection>
        <developerConnection>scm:hg:ssh://hg@bitbucket.org/atlassian/jira-issue-collector-plugin</developerConnection>
    </scm>

    <name>JIRA Issue Collector Plugin Integration Tests</name>
    <description>Integration Tests for JIRA Issue Collector Plugin</description>
    <packaging>atlassian-plugin</packaging>

    <dependencies>
		<dependency>
			<groupId>com.atlassian.jira</groupId>
			<artifactId>jira-webdriver-tests</artifactId>
			<version>${jira.test.version}</version>
			<scope>test</scope>
		</dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.10</version>
            <scope>test</scope>
        </dependency>

		<dependency>
			<groupId>${project.groupId}</groupId>
			<artifactId>jira-issue-collector-plugin</artifactId>
			<version>${project.version}</version>
			<scope>system</scope>
			<systemPath>${tested-plugin.jar}</systemPath>
		</dependency>
	</dependencies>

    <build>
		<testResources>
			<testResource>
				<directory>src/test/resources</directory>
			</testResource>
			<testResource>
				<directory>src/test/xml</directory>
				<targetPath>xml</targetPath>
			</testResource>
		</testResources>

		<pluginManagement>
        <plugins>
                <plugin>
                    <groupId>org.twdata.maven</groupId>
                    <artifactId>cargo-maven2-plugin</artifactId>
                    <version>1.0-beta-2-db2</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.4.3</version>
                <configuration>
                    <excludes>
                        <exclude>**/*$*</exclude>
                        <exclude>it/**</exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.atlassian.maven.plugins</groupId>
                <artifactId>maven-jira-plugin</artifactId>
                <version>3.11</version>
                <extensions>true</extensions>
                <configuration>
					<finalName>jira-issue-collector-plugin.jar</finalName>
					<systemPropertyVariables>
                        <xvfb.enable>${xvfb.enable}</xvfb.enable>
						<atlassian.test.target.dir>${project.build.directory}</atlassian.test.target.dir>
                    </systemPropertyVariables>
                    <jvmArgs>-Dplugin.webresource.batching.off=true -Xmx768m -XX:MaxPermSize=384m</jvmArgs>
                    <productVersion>${jira.test.version}</productVersion>
                    <productDataVersion>${jira.data.version}</productDataVersion>
                    <pluginArtifacts>
                        <pluginArtifact>
                            <groupId>com.atlassian.jira</groupId>
                            <artifactId>jira-func-test-plugin</artifactId>
                            <version>${jira.test.version}</version>
                        </pluginArtifact>
                        <!--<pluginArtifact>-->
							<!-- disabled - would try to download the artifact from the repository ignoring the local dependency -->
                            <!--<groupId>${project.groupId}</groupId>-->
                            <!--<artifactId>jira-issue-collector-plugin</artifactId>-->
                            <!--<version>${project.version}</version>-->
                        <!--</pluginArtifact>-->
					</pluginArtifacts>
                </configuration>
            </plugin>
			<plugin>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>2.1-atlassian-2</version>
				<executions>
					<execution>
						<id>copy-tested-plugin</id>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<phase>pre-integration-test</phase>
						<configuration>
							<includeArtifactIds>jira-issue-collector-plugin</includeArtifactIds>
							<outputDirectory>${project.build.directory}/jira/home/plugins/installed-plugins</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

	<properties>
		<xvfb.enable>false</xvfb.enable>
		<jira.test.version>5.0</jira.test.version>
		<jira.data.version>${jira.test.version}</jira.data.version>
		<tested-plugin.jar>${basedir}/../target/jira-issue-collector-plugin-${project.version}.jar</tested-plugin.jar>
	</properties>
	<profiles>
		<profile>
			<id>artifact-passing</id>
			<activation>
				<file>
					<exists>PassedArtifacts/jira-issue-collector-plugin.jar</exists>
				</file>
			</activation>
			<properties>
				<tested-plugin.jar>${basedir}/PassedArtifacts/jira-issue-collector-plugin.jar</tested-plugin.jar>
			</properties>
		</profile>
	</profiles>

</project>
